Use jlink to build jre